--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/mongodb": "^3.5.14",
     "express": "^4.17.1",
-    "google-auth-library": "^5.10.1"
+    "google-auth-library": "^5.10.1",
+    "mongodb": "^3.5.6"
   }
 }
