--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/mongodb": "^3.5.14",
+    "@types/nodemailer": "^6.4.0",
     "express": "^4.17.1",
     "google-auth-library": "^5.10.1",
-    "mongodb": "^3.5.6"
+    "mongodb": "^3.5.6",
+    "nodemailer": "^6.4.6"
   }
 }
